# MOTUS

./: CMakeLists.txt  CMakeLists.txt.user.e925604  EndScreen.qml  GameScreen.qml  README.md  RulesScreen.qml  dictionary.cpp  dictionary.h  dictionnaire.txt  game.cpp  game.h  main.cpp  qml.qrc  timer.cpp  timer.h
